--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -81,7 +81,7 @@
 
       {% if url %}
       <a href="{{ url }}" aria-label="{{ entry.type }}"
-        {% unless entry.noblank %}target="_blank" rel="me"{% endunless %}>
+        {% unless entry.noblank %}target="_blank" rel="me noopener"{% endunless %}>
         <i class="{{ entry.icon }}"></i>
       </a>
       {% endif %}
